--- a/imgui.ini
+++ b/imgui.ini
@@ -13,3 +13,29 @@ Pos=60,60
 Size=339,157
 Collapsed=0
 
+[Window][Control window]
+Pos=60,60
+Size=432,473
+Collapsed=0
+
+[Window][Control Window]
+Pos=60,60
+Size=401,240
+Collapsed=0
+
+[Window][Are you sure want to reset everything?]
+Pos=343,177
+Size=318,84
+Collapsed=0
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
