now we can draw over imgui windows

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,13 +19,28 @@ Size=432,473
 Collapsed=0
 
 [Window][Control Window]
-Pos=60,60
-Size=401,240
+Pos=100,63
+Size=484,376
 Collapsed=0
 
 [Window][Are you sure want to reset everything?]
 Pos=343,177
 Size=318,84
+Collapsed=0
+
+[Window][Another Demo!]
+Pos=606,135
+Size=471,303
+Collapsed=0
+
+[Window][Visual UI]
+Pos=637,145
+Size=500,500
+Collapsed=0
+
+[Window][#]
+Pos=594,22
+Size=639,653
 Collapsed=0
 
 [Table][0x861D378E,3]
